[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubeloom"
version = "0.1.0"
description = "A Kubernetes Chaos Engineering Platform"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "kubernetes==29.0.0",
    "typer==0.9.0",
    "rich==13.7.0",
    "pydantic==2.6.1"
]

[project.scripts]
kubeloom = "kubeloom.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["kubeloom"] 